fixed Parameter 'e' implicitly has an 'any' type, fixed chevron not showing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,6 +56,7 @@ details summary:hover {
 	 top: 0.75em;
 	 right: 1em;
 	 background: #fff;
+   color: black;
 }
  details .summary-chevron-up svg, details .summary-chevron-down svg {
 	 display: block;
